--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <body>
+  <head>
+    <link href="./tailwind.css" rel="stylesheet">
+  </head>
+  <body class="text-gray-800 text-4xl">
     <div id="root"></div>
   </body>
 </html>
