--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <link href="./tailwind.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body class="text-gray-800 text-4xl">
+  <body class="text-gray-800">
     <div id="root"></div>
   </body>
 </html>
